--- a/email_templates/verifyEmail.html
+++ b/email_templates/verifyEmail.html
@@ -1,19 +1,36 @@
+<link rel="preconnect" href="https://fonts.gstatic.com" />
+<link
+    href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap"
+    rel="stylesheet"
+/>
 <style>
+    * {
+        font-family: "Roboto", sans-serif;
+    }
+
     #email {
         width: 100%;
         background: white;
     }
 
     .blue {
-        color: #0d6efd;
+        color: #2d81ff;
     }
 </style>
 <div id="email">
     <h1 class="blue">Resumator</h1>
 
-    <p>To verify your email, please click the link below:</p>
+    <p>To verify your email, copy and paste the token below</p>
 
-    <div style="padding: 2em; background: lightblue" class="blue">
+    <div style="padding: 2em; background: rgba(0, 0, 255, 0.05)" class="blue">
         ${verifylink}
     </div>
+
+    <p>
+        <u>
+            If you believe that this email was sent as a mistake, or do not
+            remember signing up for resumator, delete this email and DO NOT
+            click on the link above. Delete this email immediately.
+        </u>
+    </p>
 </div>
